--- a/AdoptMe2/app/src/main/res/layout/activity_crea.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_crea.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent">
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <!-- <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="800px"
@@ -221,17 +224,5 @@
                 />
         </RelativeLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/btn_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="16dp"
-        android:text="OK" />
 
 </RelativeLayout>
