Carregar una imatge des del Firebase Storage

--- a/AdoptMe2/app/src/main/res/layout/content_main.xml
+++ b/AdoptMe2/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,13 @@
             app:itemTextColor="@drawable/item_color_state"
             app:menu="@menu/bottom_nav"></android.support.design.widget.BottomNavigationView>
 
-    </RelativeLayout>
+    <Button
+        android:id="@+id/btn_proves"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="214dp"
+        android:text="Proves" />
+
+</RelativeLayout>
