--- a/AdoptMe2/app/src/main/res/layout/info_activity.xml
+++ b/AdoptMe2/app/src/main/res/layout/info_activity.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent">
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -139,9 +142,9 @@
 
 
             <ImageView
-                android:id="@+id/i_edit_image"
-                android:layout_width="match_parent"
-                android:layout_height="800px"
+                android:id="@+id/i_show_image"
+                android:layout_width="400dp"
+                android:layout_height="400dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -209,14 +212,14 @@
                 android:id="@+id/descripcio"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/i_edit_image"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginLeft="31dp"
+                android:layout_marginStart="31dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/descripcio"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_below="@+id/i_show_image"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <CheckBox
                 android:id="@+id/i_check_desconegut"
