--- a/AdoptMe2/app/src/main/res/layout/content_main.xml
+++ b/AdoptMe2/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,8 @@
             app:itemBackground="@color/colorPrimary"
             app:itemIconTint="@drawable/item_color_state"
             app:itemTextColor="@drawable/item_color_state"
-            app:menu="@menu/bottom_nav"></android.support.design.widget.BottomNavigationView>
+            app:menu="@menu/bottom_nav">
+
+    </android.support.design.widget.BottomNavigationView>
 
     </RelativeLayout>
