--- a/AdoptMe2/app/src/main/res/menu/bottom_nav.xml
+++ b/AdoptMe2/app/src/main/res/menu/bottom_nav.xml
@@ -7,7 +7,9 @@
         android:enabled="true"
         android:icon="@drawable/ic_search"
         android:title="Search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        />
+
     <item
         android:id="@+id/action_save"
         android:enabled="true"
