--- a/AdoptMe2/app/src/main/res/menu/menu_crea.xml
+++ b/AdoptMe2/app/src/main/res/menu/menu_crea.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_OK"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_check"
         android:title="@string/action_OK"
         app:showAsAction="always"
 
