--- a/AdoptMe2/app/src/main/res/layout/content_main.xml
+++ b/AdoptMe2/app/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
     </android.support.design.widget.BottomNavigationView>
 
     <Button
-        android:id="@+id/btn_proves"
+        android:id="@+id/btn_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
