Programació botó anunci

--- a/AdoptMe2/app/src/main/res/layout/anunci.xml
+++ b/AdoptMe2/app/src/main/res/layout/anunci.xml
@@ -33,6 +33,7 @@
             android:layout_width="59dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:onClick="showinfo"
             android:text="i" />
 
         <LinearLayout
