--- a/AdoptMe2/app/src/main/res/layout/anunci.xml
+++ b/AdoptMe2/app/src/main/res/layout/anunci.xml
@@ -16,9 +16,8 @@
         android:id="@+id/img_anunci"
         android:layout_width="400dp"
         android:layout_height="400dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:adjustViewBounds="false"
         app:srcCompat="@drawable/common_full_open_on_phone" />
 
@@ -44,10 +43,11 @@
 
         <CheckBox
             android:id="@+id/chk_anunci"
+            android:button="@drawable/save_selectortate"
             android:layout_width="wrap_content"
             android:layout_height="?attr/listPreferredItemHeight"
             android:layout_marginRight="10dp"
-            android:clickable="false"
+            android:clickable="true"
             android:focusable="false"
             android:textSize="16sp" />
     </LinearLayout>
