--- a/AdoptMe2/app/src/main/res/layout/anunci.xml
+++ b/AdoptMe2/app/src/main/res/layout/anunci.xml
@@ -9,12 +9,17 @@
         android:id="@+id/txt_anunci"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="0.28"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="viewStart"
+        android:layout_gravity="start"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/img_anunci"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -29,24 +34,27 @@
 
         <Button
             android:id="@+id/btn_info"
-            android:layout_width="59dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:onClick="showinfo"
-            android:text="i" />
+            android:layout_width="37dp"
+            android:layout_height="37dp"
+            android:layout_marginLeft="27dp"
+            android:layout_marginTop="-3dp"
+            android:background="@drawable/button_style"
+            android:onClick="showinfo" />
 
         <LinearLayout
             android:layout_width="195dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="0.79"></LinearLayout>
+            android:layout_weight="0.79"
+            android:orientation="vertical">
+
+        </LinearLayout>
 
         <CheckBox
             android:id="@+id/chk_anunci"
-            android:button="@drawable/save_selectortate"
             android:layout_width="wrap_content"
-            android:layout_height="?attr/listPreferredItemHeight"
+            android:layout_height="match_parent"
             android:layout_marginRight="10dp"
+            android:button="@drawable/save_selector"
             android:clickable="true"
             android:focusable="false"
             android:textSize="16sp" />
