--- a/AdoptMe2/app/src/main/res/layout/activity_filtra.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_filtra.xml
@@ -1,9 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="barcons.pol.adoptme.FiltraActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <CheckBox
+        android:id="@+id/filtra_loc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="40sp"
+        android:layout_marginTop="40sp"
+        android:text="Localització"
+        android:textSize="24sp" />
+
+    <CheckBox
+        android:id="@+id/filtra_edat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/filtra_loc"
+        android:layout_alignStart="@+id/filtra_loc"
+        android:layout_below="@+id/filtra_loc"
+        android:layout_marginTop="89dp"
+        android:text="Edat"
+        android:textSize="24sp" />
+
+    <CheckBox
+        android:id="@+id/filtra_sexe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/filtra_edat"
+        android:layout_alignStart="@+id/filtra_edat"
+        android:layout_below="@+id/filtra_edat"
+        android:layout_marginTop="132dp"
+        android:text="Sexe"
+        android:textSize="24sp" />
+
+    <CheckBox
+        android:id="@+id/sexe_mascle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/filtra_loc"
+        android:layout_alignRight="@+id/filtra_loc"
+        android:layout_below="@+id/filtra_sexe"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginTop="13dp"
+        android:text="Mascle"
+        android:textSize="18sp" />
+
+    <CheckBox
+        android:id="@+id/sexe_femella"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/sexe_mascle"
+        android:layout_alignStart="@+id/sexe_mascle"
+        android:layout_below="@+id/sexe_mascle"
+        android:text="Femella"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/edat_min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/filtra_edat"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="13dp"
+        android:layout_toEndOf="@+id/filtra_edat"
+        android:layout_toRightOf="@+id/filtra_edat"
+        android:text="min"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/edat_max"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/guió"
+        android:layout_alignBottom="@+id/guió"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
+        android:layout_toEndOf="@+id/edit_max"
+        android:layout_toRightOf="@+id/edit_max"
+        android:text="max"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/edit_min"
+        android:layout_width="40sp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/edat_min"
+        android:layout_alignBottom="@+id/edat_min"
+        android:layout_alignEnd="@+id/filtra_loc"
+        android:layout_alignRight="@+id/filtra_loc"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/edit_max"
+        android:layout_width="40sp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/guió"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@+id/guió"
+        android:layout_toRightOf="@+id/guió"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/guió"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/edit_min"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@+id/edit_min"
+        android:layout_toRightOf="@+id/edit_min"
+        android:text="--"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="30sp" />
+
+    <CheckBox
+        android:id="@+id/edat_desconegut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edat_min"
+        android:layout_alignStart="@+id/edat_min"
+        android:layout_below="@+id/edit_min"
+        android:layout_marginTop="11dp"
+        android:text="Desconegut"
+        android:textSize="18sp" />
+
+</RelativeLayout>
