--- a/AdoptMe2/app/src/main/res/menu/menu_main.xml
+++ b/AdoptMe2/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="barcons.pol.adoptme.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_filtra"
+        android:icon="@drawable/ic_search"
+        android:title="@string/action_filtra"
+        app:showAsAction="always"
+
+        />
+
+
+
 </menu>
