--- a/AdoptMe2/app/src/main/res/menu/menu_main.xml
+++ b/AdoptMe2/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     tools:context="barcons.pol.adoptme.MainActivity">
     <item
         android:id="@+id/action_filtra"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_arrow_down"
         android:title="@string/action_filtra"
         app:showAsAction="always"
 
