--- a/AdoptMe2/app/src/main/res/layout/activity_filtra.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_filtra.xml
@@ -63,78 +63,34 @@
         android:text="@string/femella"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/edat_min"
-        android:layout_width="wrap_content"
+    <SeekBar
+        android:id="@+id/seekBar2"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/filtra_edat"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="13dp"
-        android:layout_toEndOf="@+id/filtra_edat"
-        android:layout_toRightOf="@+id/filtra_edat"
-        android:text="@string/min"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/edat_max"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/guió"
-        android:layout_alignBottom="@+id/guió"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_toEndOf="@+id/edit_max"
-        android:layout_toRightOf="@+id/edit_max"
-        android:text="@string/max"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/edit_min"
-        android:layout_width="40sp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/edat_min"
-        android:layout_alignBottom="@+id/edat_min"
-        android:layout_alignEnd="@+id/filtra_loc"
-        android:layout_alignRight="@+id/filtra_loc"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/edit_max"
-        android:layout_width="40sp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/guió"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_toEndOf="@+id/guió"
-        android:layout_toRightOf="@+id/guió"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/guió"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/edit_min"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_toEndOf="@+id/edit_min"
-        android:layout_toRightOf="@+id/edit_min"
-        android:text="@string/guió"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="30sp" />
+        android:layout_marginLeft="54dp"
+        android:layout_below="@+id/filtra_loc"
+        android:layout_marginTop="37dp" />
 
     <CheckBox
         android:id="@+id/edat_desconegut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edat_min"
-        android:layout_alignStart="@+id/edat_min"
-        android:layout_below="@+id/edit_min"
-        android:layout_marginTop="11dp"
+        android:layout_alignLeft="@+id/seekBar2"
+        android:layout_alignStart="@+id/seekBar2"
+        android:layout_below="@+id/seekBar"
+        android:layout_marginTop="24dp"
         android:text="@string/desconegut"
         android:textSize="18sp" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/seekBar2"
+        android:layout_alignLeft="@+id/seekBar2"
+        android:layout_alignRight="@+id/seekBar2"
+        android:layout_alignStart="@+id/seekBar2"
+        android:layout_below="@+id/filtra_edat"
+        android:layout_marginTop="31dp" />
 
 </RelativeLayout>
