--- a/AdoptMe2/app/src/main/res/values/colors.xml
+++ b/AdoptMe2/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#909add</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#909add</color>
 </resources>
