--- a/AdoptMe2/app/src/main/res/menu/menu_main.xml
+++ b/AdoptMe2/app/src/main/res/menu/menu_main.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="barcons.pol.adoptme.MainActivity">
     <item
-        android:id="@+id/action_filtra"
-        android:icon="@drawable/ic_arrowdown"
-        android:title="@string/action_filtra"
-        app:showAsAction="always"
 
-        />
+        android:id="@+id/action_filtra"
+        android:title="@string/action_filtra"
+        android:icon="@drawable/ic_arrowdown"
+        app:showAsAction="always|withText"
+        android:showAsAction="always|withText"
+        tools:ignore="AppCompatResource" />
 
 
 
