--- a/AdoptMe2/app/src/main/res/layout/activity_crea.xml
+++ b/AdoptMe2/app/src/main/res/layout/activity_crea.xml
@@ -117,7 +117,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="17dp"
                 android:layout_marginRight="17dp"
-                android:text="@string/famella" />
+                android:text="@string/femella" />
 
 
             <ImageView
@@ -146,8 +146,8 @@
                 android:layout_width="39dp"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/c_check_desconegut"
-                android:layout_alignEnd="@+id/c_check_male"
-                android:layout_alignRight="@+id/c_check_male"
+                android:layout_toEndOf="@+id/anys"
+                android:layout_toRightOf="@+id/anys"
                 android:inputType="number"
                 android:textSize="24sp" />
 
