--- a/AdoptMe2/app/src/main/res/layout/info_activity.xml
+++ b/AdoptMe2/app/src/main/res/layout/info_activity.xml
@@ -137,7 +137,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="17dp"
                 android:layout_marginRight="17dp"
-                android:text="@string/famella"
+                android:text="@string/femella"
                 android:clickable="false"/> <!-- inhabilitem el checkbox -->
 
 
